kubernetes/apps/default/jellyfin/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: ghcr.io/linuxserver/jellyfin:10.8.9
          imagePullPolicy: Always
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies-nfs
              mountPath: /data/movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: movies-nfs
          persistentVolumeClaim:
            claimName: movies-nfs-pvc
