kubernetes/apps/default/jellyfin/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: jellyfin
  selector:
    app: jellyfin
